@@ -1,0 +1,4 @@
+description,range
+great,A-B
+ok,C
+bad,D-F
